--- a/package.json
+++ b/package.json
@@ -3,16 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-input-mask": "^3.0.1",
+    "@types/react-text-mask": "^5.4.11",
+    "js-cookie": "^3.0.1",
+    "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-mask": "^2.0.4",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-slideshow-image": "^3.7.0",
+    "redux": "^4.1.2",
+    "styled-components": "^5.3.3",
+    "text-mask-addons": "^3.8.0",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.22",
+    "@types/styled-components": "^5.1.24"
   }
 }
